--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "bcryptjs": "^3.0.2",
     "chart.js": "^4.4.8",
     "cookies-next": "^5.1.0",
+    "date-fns": "^4.1.0",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
     "mongodb": "^6.15.0",
     "mongoose": "^8.13.1",
     "next": "15.2.3",
     "next-auth": "^4.24.11",
+    "nodemailer": "^6.10.0",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
