--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "twilio": "^4.19.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
